# IP_Catalog

./: .gitmodules  CMakeLists.txt  Import_handling.py  LICENSE  Makefile  README.md  gen_venv.sh
.github/: cnetos_install_dep.sh  install_centos_dependencies_build.sh  install_ubuntu_dependencies_build.sh  main.yml
.github/workflows/: install_centos_dependencies_build.sh  install_litex_centos.sh  install_litex_ubuntu.sh  main.yml
RapidSilicon/IP/axi_cdma/v1_0/: .~lock.licenses.txt#  LICENSE  README.md  axi_cdma_gen.py  licenses.txt
RapidSilicon/IP/axi_crossbar/v1_0/: LICENSE  axi_crossbar_gen.py
RapidSilicon/IP/axi_dma/v1_0/: LICENSE  README.md  axi_dma_gen.py
RapidSilicon/IP/axi_dpram/v1_0/: README.md  axi_dpram_gen.py  raptor.tcl
RapidSilicon/IP/axi_fifo/v1_0/: README.md  axi_fifo_gen.py  raptor.tcl
RapidSilicon/IP/axi_gpio/v1_0/: README.md  axi_gpio_gen.py  raptor.tcl
RapidSilicon/IP/axi_interconnect/v1_0/: LICENSE  axi_interconnect_gen.py
RapidSilicon/IP/axi_ram/v1_0/: README.md  axi_ram_gen.py  axi_ram_litex_sim.py  axi_ram_litex_wrapper.py  raptor.tcl
RapidSilicon/IP/axi_register/v1_0/: README.md  axi_register_gen.py  raptor.tcl
RapidSilicon/IP/axi_spi_master/v1_0/: LICENSE  README.md  axi_spi_master_gen.py
RapidSilicon/IP/axi_spi_slave/v1_0/: axi_spi_slave_gen.py
RapidSilicon/IP/axi_uart/v1_0/: axi_uart_gen.py
RapidSilicon/IP/axi_vexriscv_cpu/v1_0/: axi_vexriscv_gen.py
RapidSilicon/IP/axil_crossbar/v1_0/: README.md  axil_crossbar_gen.py
RapidSilicon/IP/axil_gpio/v1_0/: README.md  axi_gpio_gen.py  axil_gpio_gen.py  raptor.tcl
RapidSilicon/IP/axil_interconnect/v1_0/: LICENSE  README.md  axil_interconnect_gen.py
RapidSilicon/IP/axil_uart/v1_0/: README.md  axil_uart_gen.py
RapidSilicon/IP/axis_adapter/v1_0/: LICENSE  axis_adapter_gen.py
RapidSilicon/IP/axis_adaptor/v1_0/: axis_adapter_gen.py
RapidSilicon/IP/axis_broadcast/v1_0/: axis_broadcast_gen.py
RapidSilicon/IP/axis_fifo/v1_0/: LICENSE  README.md  axis_fifo_gen.py  raptor.tcl
RapidSilicon/IP/axis_pipeline_register/v1_0/: axis_pipeline_register_gen.py
RapidSilicon/IP/axis_uart/v1_0/: LICENSE  README.md  axis_uart_gen.py
RapidSilicon/IP/axis_width_converter/v1_0/: LICENSE  README.md
RapidSilicon/IP/i2c_master/v1_0/: README.md  i2c_master_gen.py  raptor.tcl
RapidSilicon/IP/i2c_master_axil_slave/v1_0/: LICENSE  README.md  i2c_master_gen.py
RapidSilicon/IP/i2c_slave/v1_0/: README.md  i2c_slave_gen.py  raptor.tcl
RapidSilicon/IP/i2c_slave_axil_master/v1_0/: README.md  i2c_slave_gen.py
RapidSilicon/IP/priority_encoder/v1_0/: LICENSE  README.md  priority_encoder_gen.py
rapidsilicon/: README.md  chat.rapidgpt
rapidsilicon/ip/: common.py
rapidsilicon/ip/ahb2axi_bridge/v1_0/: LICENSE  README.md  ahb2axi4_bridge_gen.py  ahb2axi_bridge_gen.py
rapidsilicon/ip/ahb_sram/v1_0/: LICENSE  README.md  ahb_sram_gen.py
rapidsilicon/ip/axi2ahb_bridge/v1_0/: axi2ahb_bridge_gen.py
rapidsilicon/ip/axi2axilite_bridge/v1_0/: LICENSE  README.md  axi2axilite_bridge_gen.py
rapidsilicon/ip/axi_async_fifo/v1_0/: LICENSE  README.md  axi_async_fifo_gen.py
rapidsilicon/ip/axi_cdma/v1_0/: LICENSE  axi_cdma_gen.py  feedback2.json  feedback3.json  time.sh
rapidsilicon/ip/axi_cdma/v2_0/: LICENSE  README.md  axi_cdma_gen.py
rapidsilicon/ip/axi_crossbar/v1_0/: LICENSE  README.md  axi_crossbar_gen.py
rapidsilicon/ip/axi_crossbar/v2_0/: LICENSE  README.md  axi_crossbar_gen.py
rapidsilicon/ip/axi_dma/v1_0/: LICENSE  README.md  axi_dma_gen.py
rapidsilicon/ip/axi_dpram/v1_0/: LICENSE  README.md  axi_dpram_gen.py
rapidsilicon/lib/: common.py
(+790 files in other folders)
